--- a/java-playground/html-playground/hotelFeedback.html
+++ b/java-playground/html-playground/hotelFeedback.html
@@ -72,8 +72,9 @@
             </fieldset>
             
             <label for="comments">Other Comments?</label>
-            <textarea name="comments" id="comments" cols="30" rows="10">            <button type="submit">Submit</button>
-</textarea>
+            <textarea name="comments" id="comments" cols="30 rows="10">            
+                <button type="submit">Submit</button>
+            </textarea>
         </form>
     </main>
   </body>
