--- a/java-playground/html-playground/techConferance.html
+++ b/java-playground/html-playground/techConferance.html
@@ -12,10 +12,10 @@
             <caption>Schedule by Track and Time</caption>
             
             <thead>
-                <th>Time</th>
-                <th>Track A</th>
-                <th>Track B</th>
-                <th>Track C</th>
+                <th scope="col">Time</th>
+                <th scope="col">Track A</th>
+                <th scope="col">Track B</th>
+                <th scope="col">Track C</th>
             </thead>
             <tbody>
                 <tr>
@@ -26,7 +26,7 @@
                 </tr>
 
                 <tr>
-                    <th>10:00 AM</th>
+                    <th scope="row">10:00 AM</th>
                     <td>Accessibility Deep Dive</td>
                     <td>CSS for Beginners</td>
                     <td>Inclusive Design Principles
@@ -34,24 +34,24 @@
                 </tr>
 
                 <tr>
-                    <th>11:00 AM</th>
+                    <th scope="row">11:00 AM</th>
                     <td>Break</td>
                 </tr>
 
                 <tr>
-                  <th>11:30 AM</th>  
+                  <th scope="row">11:30 AM</th>  
                   <td>AR/VR in Education</td>
                   <td>JavaScript Fundamentals</td>
                   <td>Design Systems at Scale</td>
                 </tr>
 
                 <tr>
-                    <th>12:30 PM</th>
+                    <th scope="row">12:30 PM</th>
                     <td>Lunch Break</td>
                 </tr>
 
                 <tr>
-                    <th>2:00 PM</th>
+                    <th scope="row">2:00 PM</th>
                     <td>Voice UI Workshop</td>
                     <td>Git & GitHub Essentials</td>
                     <td>Color & Contrast in UI</td>
