fixed the filling and used image styling

--- a/java-playground/css-playgorund/buisnessCard.html
+++ b/java-playground/css-playgorund/buisnessCard.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="cardStyles.css">
+        <link rel="stylesheet" href="../css-playgorund/cssStyles/cardStyles.css">
         <title>Business Card</title>
     </head>
 
