--- a/java-playground/css-playgorund/toDoList.html
+++ b/java-playground/css-playgorund/toDoList.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="toDo.css">
+    <link rel="stylesheet" href="../css-playgorund/cssStyles/toDo.css">
     <meta charset="utf-8">
     <title>Styled To-Do List</title>
 </head>
