--- a/java-playground/css-playgorund/valentines/index.html
+++ b/java-playground/css-playgorund/valentines/index.html
@@ -20,7 +20,7 @@
             </button>
 
             <button id="nobtn">
-                <b>No get tf outta here!</b>
+                <b>No I hate you!</b>
             </button>
 
 
