styled different fieldsets on parent teacher

--- a/java-playground/html-playground/hotelFeedback.html
+++ b/java-playground/html-playground/hotelFeedback.html
@@ -72,9 +72,9 @@
             </fieldset>
             
             <label for="comments">Other Comments?</label>
-            <textarea name="comments" id="comments" cols="30 rows="10">            
-                <button type="submit">Submit</button>
+            <textarea name="comments" id="comments" cols="30" rows="10">
             </textarea>
+            <button type="submit">Submit</button>
         </form>
     </main>
   </body>
